fix z-index for panel

--- a/src/feature/PanelMenu/PanelMenu.module.scss
+++ b/src/feature/PanelMenu/PanelMenu.module.scss
@@ -1,6 +1,7 @@
 @import '../../shared/assets/styles/basics.scss';
 
 .panel {
+  z-index: 99;
   position: fixed;
   bottom: 0;
   left: 0;
